--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,15 +1,19 @@
 resource_types:
-- name: telegram-notification
+- name: injectyy
   type: docker-image
   source:
-    repository: w32blaster/concourse-telegram-notifier
-    tag: latest
+    repository: injectyy/docker-compose
+    tag: 0.0.2
 
 resources:
 - name: project
   type: git
   source:
     uri: https://github.com/JPro173/concourse-resdir.git
+- name: injecty
+  type: injectyy
+  source:
+    path: project
 
 
 jobs:
@@ -17,6 +21,6 @@ jobs:
   public: true
   plan:
   - get: project
+  - get: injecty
   - task: example
-    privileged: true
     file: project/ci/tasks/example_task.yml
