--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -19,6 +19,7 @@ jobs:
   plan:
   - get: project
   - get: injecty
+    params: {work_dir: project}
 
   - task: example
     file: project/ci/tasks/example_task.yml
