--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -20,6 +20,7 @@ jobs:
   - get: project
   - task: example2
     file: project/ci/tasks/example2_task.yml
+  - get: result
   - get: injecty
   - task: example
     file: project/ci/tasks/example_task.yml
