--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -18,9 +18,7 @@ jobs:
   public: true
   plan:
   - get: project
-  - task: example2
-    file: project/ci/tasks/example2_task.yml
-  - get: result
   - get: injecty
+  - put: injecty
   - task: example
     file: project/ci/tasks/example_task.yml
